# TBRGS_software

./: .env.example  .gitignore  README  conftest.py  main.py  map.html  pyproject.toml  requirements.txt
data/: graph.npz
models/: Deep_Final_best.pth
models/dcrnn/: dcrnn_best.pt
models/gru/: PROJECT_SUMMARY.md
models/lstm/: DEEP_LSTM_FINAL_PROJECT_SUMMARY.md  DEEP_LSTM_PROJECT_SUMMARY.md  README.md
scripts/: build_road_graph.py
src/: config.py
src/algorithms/: astar.py  bfs.py  cus1.py  cus2.py  dfs.py  gbfs.py  registry.py  yen_ksp.py
src/api/: app.py  dependencies.py  graph_api.py  middleware.py  models_page.py  routes_page.py  scenarios.py  test_cases_catalog.py  validation.py
src/core/: graph.py  graph_adapter.py
src/data/: __init__.py  pems_client.py
src/prediction/: dcrnn_model.py  dcrnn_provider.py  gru_model.py  gru_provider.py  interface.py  lstm_model.py  lstm_provider.py  mock_provider.py
src/routing/: edge_weights.py  endpoint_resolver.py  haversine.py  route_finder.py  travel_time.py
src/utils/: map.py  (+2 more)
templates/: base.html  models.html  routes.html  testing.html
test_cases/: README.md  tc_001.json  tc_002.json  tc_003.json  tc_004.json  tc_005.json  tc_006.json  tc_007.json  tc_008.json  tc_009.json  tc_010.json  tc_011.json  tc_012.json  tc_013.json
tests/: conftest.py  test_api.py  test_config.py  test_dcrnn_provider.py  test_graph_adapter.py  test_gru_provider.py  test_haversine.py  test_lstm_provider.py  test_middleware.py  test_pems_client.py  test_prediction.py  test_route_finder.py  test_travel_time.py  test_yen_ksp.py
(+5 files in other folders)
